# swarm-crewai-agents

bitcoin_researcher/: README.md  analyzes_pt-br.md  pyproject.toml  report.md
bitcoin_researcher/src/bitcoin_researcher/: convert_to_audio.py  crew.py  main.py
bitcoin_researcher/src/bitcoin_researcher/config/: agents.yaml  tasks.yaml
