[tool.poetry]
name = "bitcoin_researcher"
version = "0.1.0"
description = "bitcoin_researcher using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.30.11" }

[tool.poetry.scripts]
bitcoin_researcher = "bitcoin_researcher.main:run"
train = "bitcoin_researcher.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
